--- a/silvia.yml
+++ b/silvia.yml
@@ -30,6 +30,6 @@
       
   - name: Copy files
     copy: 
-      src: /tmp/templatemo_530_mini_profile/
+      src: /tmp/card/
       dest: /var/www/html
       remote_src: yes 
