--- a/silvia.yml
+++ b/silvia.yml
@@ -24,12 +24,12 @@
 
   - name: Unarchive a file that needs to be downloaded
     unarchive:
-      src: https://www.free-css.com/assets/files/free-css-templates/download/page277/cads.zip
+      src: https://www.free-css.com/assets/files/free-css-templates/download/page276/transportz.zip
       dest: /tmp/
       remote_src: yes
       
   - name: Copy files
     copy: 
-      src: /tmp/card/
+      src: /tmp/transportz/
       dest: /var/www/html
       remote_src: yes 
